[project]
name = "fuzzy-detect-speech-emotion"
version = "0.1.0"
description = ""
authors = [
    {name = "aliepratama",email = "aliepratama2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "gradio (>=5.31.0,<6.0.0)",
    "librosa (>=0.11.0,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
